--- a/settings.json
+++ b/settings.json
@@ -6,5 +6,6 @@
     "editor.minimap.enabled": false,
     "workbench.statusBar.feedback.visible": false,
     "editor.links": false,
-    "workbench.startupEditor": "none"
+    "workbench.startupEditor": "none",
+    "window.zoomLevel": 1
 }
